added form tags around search

--- a/borderHacks/index.html
+++ b/borderHacks/index.html
@@ -53,11 +53,12 @@
 
 
 
-
+<form action="/action_page.php">
   <div class="container" style = "margin-top: 55%">
-    <input type="text" placeholder="Search...">
+    <input type="text" placeholder="Search..." name="search">
     <div class="search"></div>
   </div>
+  </form>
 
 
 <h2 class = "searchText">Here is where you search a URL</h2>
