--- a/borderHacks/index.html
+++ b/borderHacks/index.html
@@ -52,14 +52,13 @@
 
 
 
-
+<!-- Url field and button -->
 <form action="/action_page.php">
   <div class="container" style = "margin-top: 55%">
     <input type="text" placeholder="Search..." name="search">
     <div class="search"></div>
   </div>
-  </form>
-
+</form>
 
 <h2 class = "searchText">Here is where you search a URL</h2>
 
@@ -102,8 +101,13 @@
       <div class="w3-half">
         <img src="https://uxfactor.files.wordpress.com/2012/12/stick-figure1.jpg?w=640" style="width:100%">
         <h2>Olufemi Olumaiyegun</h2>
-        <p>About Section lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-          ex ea commodo consequat.</p>
+        <p>Programming, Cloud and Cybersecurity enthusiast.
+<br><br>
+I am a Senior currently in the process of acquiring a Bachelor of Science degree in Computer Science at the University of North Texas.
+<br><br>
+My greatest philosophy is that nothing is impossible. I am a problem solver and I do not shy away from problems as they intrigue me. This is the approach I take with tasks and thus I am able to hold myself to a set standard.
+<br><br>
+I am a decent developer who has worked on a number of projects and am well versed in Python, HTML, CSS, Javascript and C++ coding. I am also proficient in database servers management. I am a team-worker who can effectively take charge when necessary. I am good at communicating and ensure to do my part in passing information up and down the chain of command. I am an avid learner and as such I try to learn new skills during my free time. </p>
       </div>
     <!-- End photo grid -->
     </div>
