--- a/borderHacks/index.html
+++ b/borderHacks/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>TITLE</title>
+<title>Main Page</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -53,7 +53,7 @@
 
 
 <!-- Url field and button -->
-<form action="/action_page.php">
+<form action="searchpage.html">
   <div class="container" style = "margin-top: 55%">
     <input type="text" placeholder="Search..." name="search">
     <div class="search"></div>
