--- a/borderHacks/index.html
+++ b/borderHacks/index.html
@@ -55,7 +55,7 @@
 <!-- Url field and button -->
 <form action="searchpage.html">
   <div class="container" style = "margin-top: 55%">
-    <input type="text" placeholder="Search..." name="search">
+    <input type="text" placeholder="https://website.com" name="search">
     <div class="search"></div>
   </div>
 </form>
