--- a/borderHacks/searchpage.html
+++ b/borderHacks/searchpage.html
@@ -44,10 +44,33 @@
 
     <!--pull search results-->
 
+<h1 class = "searchTitle">This website is &lt;<span class = "green">SAFE</span> or <span class = "red">NOT SAFE</span>&gt</h1>
 
-
-
-
+<hr>
+<h2 class = "info">Info1</h2>
+<div class="help-tip">
+    <p>This is the inline help tip! It can contain all kinds of stuff.</p>
+</div>
+<br><br><br>
+<hr>
+<h2 class = "info">Info2</h2>
+<div class="help-tip">
+    <p>This is the inline help tip! It can contain all kinds of stuff.</p>
+</div>
+<br><br><br>
+<hr>
+<h2 class = "info">Info3</h2>
+<div class="help-tip">
+    <p>This is the inline help tip! It can contain all kinds of stuff.</p>
+</div>
+<br><br><br>
+<hr>
+<h2 class = "info">Info4</h2>
+<div class="help-tip">
+    <p>This is the inline help tip! It can contain all kinds of stuff.</p>
+</div>
+<br><br><br>
+<hr>
 
 
 
