--- a/borderHacks/index.html
+++ b/borderHacks/index.html
@@ -92,15 +92,21 @@
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
+        <h2>Peyton Thibodeaux</h2>
         <img src="https://uxfactor.files.wordpress.com/2012/12/stick-figure1.jpg?w=640" style="width:100%">
-        <h2>Peyton Thibodeau</h2>
-        <p>About Section lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-          ex ea commodo consequat.</p>
+
+        <p>I am Peyton Thibodeaux, an aspiring software engineer. I have had exposure to multiple object-oriented programming languages such as C++ and Java. Along with this, I have used different web development languages such as HTML, CSS, javaScript. And PHP.
+<br><br>
+I have been interested in programming for many years now and as long as I can remember I’ve had a passion for technology. Whether it comes to creating a webpage with HTML or creating algorithms with Java, I have always had a desire to learn as much as I can and a drive to do so.
+<br><br>
+I want to work in the career of software engineering, and I can see myself fitting into this vocation. I have worked on many different projects in the past few years. A package shipping cost calculation, a personal portfolio webpage, and a quasi-random AI response system to name a few.
+</p>
       </div>
 
       <div class="w3-half">
-        <img src="https://uxfactor.files.wordpress.com/2012/12/stick-figure1.jpg?w=640" style="width:100%">
         <h2>Olufemi Olumaiyegun</h2>
+        <img src="https://uxfactor.files.wordpress.com/2012/12/stick-figure1.jpg?w=640" style="width:100%">
+
         <p>Programming, Cloud and Cybersecurity enthusiast.
 <br><br>
 I am a Senior currently in the process of acquiring a Bachelor of Science degree in Computer Science at the University of North Texas.
