--- a/borderHacks/index.html
+++ b/borderHacks/index.html
@@ -19,7 +19,7 @@
   </a>
   <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-user w3-xxlarge"></i>
-    <p>ABOUT</p>
+    <p>PURPOSE</p>
   </a>
   <a href="#photos" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-eye w3-xxlarge"></i>
@@ -35,7 +35,7 @@
 <div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
   <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
     <a href="#" class="w3-bar-item w3-button" style="width:25% !important">HOME</a>
-    <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">ABOUT</a>
+    <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">PURPOSE</a>
     <a href="#photos" class="w3-bar-item w3-button" style="width:25% !important">PHOTOS</a>
     <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">CONTACT</a>
   </div>
@@ -70,13 +70,16 @@
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">The Purpose</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-      ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
-      adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    <p>When browsing the internet, security is a top priority. How much do you really know about the websites you visit? We built this tool to see how safe a website is based on certain criteria, as well as pull information
+      from a site and explain it in a easy to understand way. <br><br>
+      Our tool will take a user entered URL and scrub information on it from a python scanner. We want to promote web safety as well as make the general public more aware of threats you can run into online. This is a topic
+      we hold in high regard, and see a major importance for it.
     </p>
+    <!--
     <button class="w3-button w3-light-grey w3-padding-large w3-section">
       <i class="fa fa-download"></i> Download something
     </button>
+    -->
     </div>
   <!-- End About Section -->
   </div>
@@ -84,16 +87,14 @@
   <!-- Team Section -->
   <div class="w3-padding-64 w3-content" id="photos">
     <h2 class="w3-text-light-grey">The Team</h2>
-    <p>lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-      ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
-      adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p>We are a team of two university students. We both attend the Univeristy of North Texas, and have worked on projects together in the past. We originally made this project for the cybersecurity track for borderhacks.</p>
     <hr style="width:200px" class="w3-opacity">
 
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
         <h2>Peyton Thibodeaux</h2>
-        <img src="https://uxfactor.files.wordpress.com/2012/12/stick-figure1.jpg?w=640" style="width:100%">
+        <img src="images/peytonPic.jpg" style="width:50%;" class = "center">
 
         <p>I am Peyton Thibodeaux, an aspiring software engineer. I have had exposure to multiple object-oriented programming languages such as C++ and Java. Along with this, I have used different web development languages such as HTML, CSS, javaScript. And PHP.
 <br><br>
@@ -105,7 +106,7 @@ I want to work in the career of software engineering, and I can see myself fitti
 
       <div class="w3-half">
         <h2>Olufemi Olumaiyegun</h2>
-        <img src="https://uxfactor.files.wordpress.com/2012/12/stick-figure1.jpg?w=640" style="width:100%">
+        <img src="images/olufemi.png" style="width:55%" class = "center">
 
         <p>Programming, Cloud and Cybersecurity enthusiast.
 <br><br>
@@ -122,15 +123,33 @@ I am a decent developer who has worked on a number of projects and am well verse
 
   <!-- Contact Section -->
   <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
-    <h2 class="w3-text-light-grey">Contact Me</h2>
+    <h2 class="w3-text-light-grey">Contact Us</h2>
     <hr style="width:200px" class="w3-opacity">
 
-    <div class="w3-section">
-      <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Texas, US</p>
-      <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +1 225-978-0597</p>
-      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: peyton.t131@gmail.com</p>
-    </div><br>
-    <p>Let's get in touch. Send me a message:</p>
+  <!-- Grid for contact info -->
+    <div class="w3-row-padding" style="margin:0 -16px">
+      <div class="w3-half">
+        <div class="w3-section">
+          <p>Peyton Thibodeaux</p>
+          <p class = "left"><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Texas, US</p>
+          <p class = "left"><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: 225-978-0597</p>
+          <p class = "left"><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: peyton.t131@gmail.com</p>
+        </div><br>
+      </div>
+      <div class="w3-half">
+        <div class="w3-section">
+          <p class = "right">Olufemi Olumaiyegun</p>
+          <p class = "right"><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Texas, US</p>
+          <p class = "right"><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: 469-847-3371</p>
+          <p class = "right"><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: femimayegun@gmail.com</p>
+        </div>
+
+        </div>
+    <!-- End contact grid -->
+    </div>
+
+    <br><br><br>
+<p>Let's get in touch. Send us a message:</p>
 
     <form action="/action_page.php" target="_blank">
       <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
@@ -148,12 +167,26 @@ I am a decent developer who has worked on a number of projects and am well verse
 
     <!-- Footer -->
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
+
+    <!-- Grid for widget info -->
+      <div class="w3-row-padding" style="margin:0 -16px">
+        <div class="w3-half">
+          <div class="w3-section">
+            <p>Peyton Thibodeaux</p>
+            <i class="fa fa-facebook-official w3-hover-opacity"></i>
+            <i class="fa fa-linkedin w3-hover-opacity" src = "linkedin.com/in/peyton-thibodeaux-0609b416a"></i>
+          </div><br>
+        </div>
+        <div class="w3-half">
+          <div class="w3-section">
+            <p class = "right">Olufemi Olumaiyegun</p>
+            <i class="fa fa-facebook-official w3-hover-opacity" src = "https://www.facebook.com/peyton.thibodeaux.10"></i>
+            <i class="fa fa-twitter w3-hover-opacity"></i>
+            <i class="fa fa-linkedin w3-hover-opacity" src = "linkedin.com/in/olufemi-olumaiyegun-92859418b"></i>
+          </div>
+
+          </div>
+      <!-- End widget grid -->
   <!-- End footer -->
   </footer>
 
